force-app/main/default/objects/Agent_Memory__c/Agent_Memory__c.object-meta.xml
<CustomObject>
    <description>Core persistence layer of the Contextual Agent Memory system. Stores one record per entity-per-cloud combination. Deduplication enforced via SHA-256 Org_Context_Hash__c.</description>
    <label>Agent Memory</label>
    <nameField>
        <label>Memory Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Memories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>