force-app/main/default/objects/Agent_Memory__c/fields/Cloud_Source__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Source__c</fullName>
    <description>Identifies which Salesforce Cloud generated this memory entry.</description>
    <label>Cloud Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>