force-app/main/default/objects/Agent_Memory__c/fields/Context_Payload__c.field-meta.xml
<CustomField>
    <fullName>Context_Payload__c</fullName>
    <description>Stores the raw JSON context snapshot at the time of the last agent action.</description>
    <label>Context Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>