force-app/main/default/objects/Agent_Memory__c/fields/Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Entity_Id__c</fullName>
    <description>18-character Salesforce record ID of the entity this memory pertains to.</description>
    <externalId>true</externalId>
    <label>Entity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>