force-app/main/default/objects/Agent_Memory__c/fields/Intent_Tags__c.field-meta.xml
<CustomField>
    <fullName>Intent_Tags__c</fullName>
    <description>Comma-separated learned intent signals. Max 10 tags enforced by MAX_TAGS_PER_MEMORY constant.</description>
    <label>Intent Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>