force-app/main/default/objects/Agent_Memory__c/fields/Last_Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Last_Action_Taken__c</fullName>
    <description>Free-text label of the most recent agent-assisted action.</description>
    <label>Last Action Taken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>