force-app/main/default/objects/Agent_Memory__c/fields/Last_Interacted_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Interacted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the User who triggered the most recent memory write.</description>
    <label>Last Interacted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Agent Memories</relationshipLabel>
    <relationshipName>Agent_Memories</relationshipName>
    <type>Lookup</type>
</CustomField>