force-app/main/default/objects/Agent_Memory__c/fields/Memory_Strength__c.field-meta.xml
<CustomField>
    <fullName>Memory_Strength__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Core intelligence score. Range 0-100. Created at 50. +10 on each reinforcement (capped at 100). -5 on dismissal. -5 nightly via batch for stale memories.</description>
    <label>Memory Strength</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>