force-app/main/default/objects/Agent_Memory__c/fields/Org_Context_Hash__c.field-meta.xml
<CustomField>
    <fullName>Org_Context_Hash__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>SHA-256 hex digest (64 chars) of entityId|cloudSource|entityType|orgId. Unique external ID enables upsert deduplication.</description>
    <externalId>true</externalId>
    <label>Org Context Hash</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>