force-app/main/default/objects/Agent_Memory__c/fields/Pattern_Count__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Integer counter incremented by 1 on every call to reinforceMemory(). Feeds confidence formula.</description>
    <label>Pattern Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>